// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItem /> should display text truncated 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  display: inline-block;
  height: 100%;
  vertical-align: middle;
  color: #231B22;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

<span
  class="c0"
>
  2.900 gyms and studios
</span>
`;

exports[`<ListItem /> should not display text truncated when truncate prop is false 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  display: inline-block;
  height: 100%;
  vertical-align: middle;
  color: #231B22;
}

<span
  class="c0"
>
  2.900 gyms and studios
</span>
`;
